check_final.txt
   Compiling simple_forwarder v0.1.0 (F:\Rust\simple_forwarder)
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\simple_forwarder\target\x86_64-pc-windows-msvc\debug\incremental\simple_forwarder-1d72qvca6bo4p\s-hh3k06xo3v-1by4496-working`

error[E0425]: cannot find value `is_direct` in this scope
   --> src\proxy_server.rs:167:44
    |
167 |     Ok((stream, target_stream, host, port, is_direct))
    |                                            ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `is_direct` in this scope
   --> src\proxy_server.rs:265:44
    |
265 |     Ok((stream, target_stream, host, port, is_direct))
    |                                            ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `is_direct` in this scope
   --> src\proxy_server.rs:395:44
    |
395 |     Ok((stream, target_stream, host, port, is_direct))
    |                                            ^^^^^^^^^ not found in this scope

error[E0433]: cannot find type `Ordering` in this scope
   --> src\proxy_server.rs:467:61
    |
467 |                         stats.direct_tx.fetch_add(n as u64, Ordering::Relaxed);
    |                                                             ^^^^^^^^ use of undeclared type `Ordering`
    |
help: consider importing one of these enums
    |
  1 + use std::cmp::Ordering;
    |
  1 + use std::sync::atomic::Ordering;
    |

error[E0433]: cannot find type `Ordering` in this scope
   --> src\proxy_server.rs:469:63
    |
469 |                         stats.upstream_tx.fetch_add(n as u64, Ordering::Relaxed);
    |                                                               ^^^^^^^^ use of undeclared type `Ordering`
    |
help: consider importing one of these enums
    |
  1 + use std::cmp::Ordering;
    |
  1 + use std::sync::atomic::Ordering;
    |

error[E0433]: cannot find type `Ordering` in this scope
   --> src\proxy_server.rs:488:61
    |
488 |                         stats.direct_rx.fetch_add(n as u64, Ordering::Relaxed);
    |                                                             ^^^^^^^^ use of undeclared type `Ordering`
    |
help: consider importing one of these enums
    |
  1 + use std::cmp::Ordering;
    |
  1 + use std::sync::atomic::Ordering;
    |

error[E0433]: cannot find type `Ordering` in this scope
   --> src\proxy_server.rs:490:63
    |
490 |                         stats.upstream_rx.fetch_add(n as u64, Ordering::Relaxed);
    |                                                               ^^^^^^^^ use of undeclared type `Ordering`
    |
help: consider importing one of these enums
    |
  1 + use std::cmp::Ordering;
    |
  1 + use std::sync::atomic::Ordering;
    |

warning: unused import: `Ordering`
 --> src\stats.rs:1:36
  |
1 | use std::sync::atomic::{AtomicU64, Ordering};
  |                                    ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\proxy_server.rs:265:17
    |
265 |     Ok((stream, target_stream, host, port, is_direct))
    |                 ^^^^^^^^^^^^^ expected `TcpStream`, found `(TcpStream, bool)`
    |
    = note: expected struct `tokio::net::TcpStream`
                found tuple `(tokio::net::TcpStream, bool)`

error[E0308]: mismatched types
   --> src\proxy_server.rs:167:17
    |
167 |     Ok((stream, target_stream, host, port, is_direct))
    |                 ^^^^^^^^^^^^^ expected `TcpStream`, found `(TcpStream, bool)`
    |
    = note: expected struct `tokio::net::TcpStream`
                found tuple `(tokio::net::TcpStream, bool)`

error[E0599]: the method `write_all` exists for tuple `(tokio::net::TcpStream, bool)`, but its trait bounds were not satisfied
   --> src\proxy_server.rs:377:23
    |
377 |         target_stream.write_all(&rewritten_line).await?;
    |                       ^^^^^^^^^ method cannot be called on `(tokio::net::TcpStream, bool)` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `(tokio::net::TcpStream, bool): AsyncWrite`
            which is required by `(tokio::net::TcpStream, bool): AsyncWriteExt`

error[E0599]: the method `write_all` exists for tuple `(tokio::net::TcpStream, bool)`, but its trait bounds were not satisfied
   --> src\proxy_server.rs:392:23
    |
392 |         target_stream.write_all(&headers).await?;
    |                       ^^^^^^^^^ method cannot be called on `(tokio::net::TcpStream, bool)` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `(tokio::net::TcpStream, bool): AsyncWrite`
            which is required by `(tokio::net::TcpStream, bool): AsyncWriteExt`

error[E0308]: mismatched types
   --> src\proxy_server.rs:395:17
    |
395 |     Ok((stream, target_stream, host, port, is_direct))
    |                 ^^^^^^^^^^^^^ expected `TcpStream`, found `(TcpStream, bool)`
    |
    = note: expected struct `tokio::net::TcpStream`
                found tuple `(tokio::net::TcpStream, bool)`

warning: unused variable: `menu_channel`
  --> src\tray.rs:88:13
   |
88 |         let menu_channel = MenuEvent::receiver();
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_menu_channel`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `thread_id_for_menu`
  --> src\tray.rs:95:13
   |
95 |         let thread_id_for_menu = msg_thread_id.clone();
   |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_thread_id_for_menu`

Some errors have detailed explanations: E0308, E0425, E0433, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `simple_forwarder` (bin "simple_forwarder") generated 4 warnings
error: could not compile `simple_forwarder` (bin "simple_forwarder") due to 12 previous errors; 4 warnings emitted
